--- a/index.html
+++ b/index.html
@@ -25,6 +25,53 @@
         </div>
     </header>
     <!-- header end-->
+
+    <!-- navigation menu start -->
+    <nav class="nav-menu">
+        <div class="close-nav-menu outer-shadow hover-in-shadow">&times;</div>
+        <div class="nav-menu-inner">
+            <ul>
+                <li>
+                    <a href="#" class="inner-shadow active">home</a>
+                </li>
+                <li>
+                    <a href="#" class="outer-shadow hover-in-shadow">about</a>
+                </li>
+                <li>
+                    <a href="#" class="outer-shadow hover-in-shadow">services</a>
+                </li>
+                <li>
+                    <a href="#" class="outer-shadow hover-in-shadow">protfolio</a>
+                </li>
+                <li>
+                    <a href="#" class="outer-shadow hover-in-shadow"> testimnonial</a>
+                </li>
+                <li>
+                    <a href="#" class="outer-shadow hover-in-shadow">contact</a>
+                </li>
+            </ul>
+        </div>
+        <!--  copyright text -->
+        <p class="copyright-text">&copy;1400 Nakhll.com</p>
+    </nav>
+
+    <!-- navigation menu end -->
+
+    <!-- home section start -->
+    <section class="home-section section">
+        <div class="container">
+            <div class="row">
+                <div class="home-text">
+                    <p>سلام</p>
+                    <h2>من میلاد حسنی هستم</h2>
+                    <h1>حجره فرش</h1>
+                </div>
+                <div class="home-img">
+                    <div class="img-box"></div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
