--- a/index.html
+++ b/index.html
@@ -59,19 +59,78 @@
 
     <!-- home section start -->
     <section class="home-section section">
+        <!-- effect wrap start -->
+        <div class="effect-wrap">
+            <div class="effect effect-1"></div>
+            <div class="effect effect-2">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="effect effect-3"></div>
+            <div class="effect effect-4"></div>
+            <div class="effect effect-5">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+
+        <!-- effect wrap end -->
+
+
         <div class="container">
-            <div class="row">
+            <div class="row full-screen align-items-center">
                 <div class="home-text">
                     <p>سلام</p>
-                    <h2>من میلاد حسنی هستم</h2>
+                    <h2>فاطمه امیرتیموری هستم</h2>
                     <h1>حجره فرش</h1>
+                    <a href="#" class="btn-1 outer-shadow hover-in-shadow">درباره من</a>
                 </div>
                 <div class="home-img">
-                    <div class="img-box"></div>
+                    <div class="img-box inner-shadow">
+                        <img src="milad.png" class="outer-shadow" alt="milad">
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- home section end -->
+
+    <!-- about section start -->
 </body>
 
 </html>
