--- a/index.html
+++ b/index.html
@@ -131,6 +131,33 @@
     <!-- home section end -->
 
     <!-- about section start -->
+    <section class="about-section section">
+        <div class="container">
+            <div class="row">
+                <div class="section-title">
+                    <h2 data-heading="main info">About me</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="about-img">
+                    <div class="img-box inner-shadow">
+                        <img src="./milad.png" class="outer-shadow" alt="profile-pic">
+                    </div>
+                </div>
+                <div class="about-info">
+                    <p><span>hi im milad hasani.</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum veniam nihil iusto molestiae ipsam saepe hic velit eius excepturi praesentium voluptatem enim sapiente nobis sequi exercitationem optio
+                        libero ducimus voluptas, repellat consequuntur doloribus fuga nostrum? Tempora voluptates excepturi ipsum id adipisci, ea est iure illum tempore reiciendis laudantium voluptatem cumque qui facere ex obcaecati ad sit asperiores
+                        ipsa non quas quo repellat. Minima perferendis eaque ducimus fugit ab officiis nulla reiciendis at ad quae. Corrupti distinctio, facere, amet ullam quod fugiat natus animi esse illo nostrum dolores iste corporis necessitatibus
+                        nihil consequatur sequi consectetur, optio minus dignissimos unde ipsum cupiditate voluptates! Atque, deleniti itaque necessitatibus doloremque at aliquid repellat voluptate culpa, laudantium soluta praesentium ipsum eveniet. Aliquam
+                        quibusdam at sit saepe et soluta. Unde eius ipsa, accusamus nesciunt aliquid illum quas rem magnam, saepe reprehenderit, autem blanditiis. Excepturi quae laboriosam facere voluptatem impedit dolorem ipsa accusamus vel quas quis
+                        minus, odio accusantium, cum nam distinctio quasi in autem. Ut autem officia dolor itaque. Minima voluptatem temporibus sequi unde, quaerat voluptas ipsum esse nostrum magni! Quo quibusdam cupiditate pariatur obcaecati? Voluptate,
+                        aut perferendis. Maiores hic nobis ipsa incidunt eum cupiditate, nemo at aspernatur repellendus itaque id vel culpa labore laborum iusto.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- about section end -->
 </body>
 
 </html>
