--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/color-1.css" />
+    <!-- font awsome -->
+    <link rel="stylesheet" href="./css/fontawsome.css" />
 </head>
 
 <body>
@@ -110,7 +112,6 @@
 
         <!-- effect wrap end -->
 
-
         <div class="container">
             <div class="row full-screen align-items-center">
                 <div class="home-text">
@@ -121,7 +122,7 @@
                 </div>
                 <div class="home-img">
                     <div class="img-box inner-shadow">
-                        <img src="milad.png" class="outer-shadow" alt="milad">
+                        <img src="milad.png" class="outer-shadow" alt="milad" />
                     </div>
                 </div>
             </div>
@@ -141,23 +142,147 @@
             <div class="row">
                 <div class="about-img">
                     <div class="img-box inner-shadow">
-                        <img src="./milad.png" class="outer-shadow" alt="profile-pic">
+                        <img src="./milad.png" class="outer-shadow" alt="profile-pic" />
                     </div>
+                    <!-- social links start -->
+                    <div class="social-links">
+                        <a href="" class="outer-shadow hover-in-shadow"><i class="fab fa-facebook-f"></i
+              ></a>
+                        <a href="" class="outer-shadow hover-in-shadow"><i class="fab fa-instagram"></i
+              ></a>
+                        <a href="" class="outer-shadow hover-in-shadow"><i class="fab fa-twitter"></i
+              ></a>
+                        <a href="" class="outer-shadow hover-in-shadow"><i class="fab fa-linkedin"></i
+              ></a>
+                    </div>
+                    <!-- social links start -->
                 </div>
                 <div class="about-info">
-                    <p><span>hi im milad hasani.</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum veniam nihil iusto molestiae ipsam saepe hic velit eius excepturi praesentium voluptatem enim sapiente nobis sequi exercitationem optio
+                    <p>
+                        <span>hi im milad hasani.</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum veniam nihil iusto molestiae ipsam saepe hic velit eius excepturi praesentium voluptatem enim sapiente nobis sequi exercitationem optio
                         libero ducimus voluptas, repellat consequuntur doloribus fuga nostrum? Tempora voluptates excepturi ipsum id adipisci, ea est iure illum tempore reiciendis laudantium voluptatem cumque qui facere ex obcaecati ad sit asperiores
                         ipsa non quas quo repellat. Minima perferendis eaque ducimus fugit ab officiis nulla reiciendis at ad quae. Corrupti distinctio, facere, amet ullam quod fugiat natus animi esse illo nostrum dolores iste corporis necessitatibus
                         nihil consequatur sequi consectetur, optio minus dignissimos unde ipsum cupiditate voluptates! Atque, deleniti itaque necessitatibus doloremque at aliquid repellat voluptate culpa, laudantium soluta praesentium ipsum eveniet. Aliquam
                         quibusdam at sit saepe et soluta. Unde eius ipsa, accusamus nesciunt aliquid illum quas rem magnam, saepe reprehenderit, autem blanditiis. Excepturi quae laboriosam facere voluptatem impedit dolorem ipsa accusamus vel quas quis
                         minus, odio accusantium, cum nam distinctio quasi in autem. Ut autem officia dolor itaque. Minima voluptatem temporibus sequi unde, quaerat voluptas ipsum esse nostrum magni! Quo quibusdam cupiditate pariatur obcaecati? Voluptate,
-                        aut perferendis. Maiores hic nobis ipsa incidunt eum cupiditate, nemo at aspernatur repellendus itaque id vel culpa labore laborum iusto.</p>
-                </div>
-            </div>
+                        aut perferendis. Maiores hic nobis ipsa incidunt eum cupiditate, nemo at aspernatur repellendus itaque id vel culpa labore laborum iusto.
+                    </p>
+                    <a href="cv.pdf" class="btn-1 outer-shadow hover-in-shadow">دانلود رزومه</a
+            >
+            <a href="#" class="btn-1 outer-shadow hover-in-shadow"
+              >تعامل با من</a
+            >
+          </div>
         </div>
+        <!-- about tab start -->
+        <div class="row">
+          <div class="about-tabs">
+            <div class="tab-item outer-shadow active" data-target=".skills">
+              مهارت ها
+            </div>
+            <div class="tab-item" data-target=".experience">تجربه</div>
+            <div class="tab-item" data-target=".education">تحصیلات</div>
+          </div>
+        </div>
+
+        <!-- about tab end -->
+        <!-- skills start -->
+        <div class="row">
+          <div class="skills tab-content">
+            <div class="row">
+              <!-- skill item start -->
+              <div class="skill-item">
+                <p>HTML</p>
+                <div class="progress inner-shadow">
+                  <div class="progress-bar" style="width: calc(50% - 14px)">
+                    <span>50%</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="skill-item">
+                <p>javaScript</p>
+                <div class="progress inner-shadow">
+                  <div class="progress-bar" style="width: calc(50% - 14px)">
+                    <span>60%</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="skill-item">
+                <p>bootstrap</p>
+                <div class="progress inner-shadow">
+                  <div class="progress-bar" style="width: calc(70% - 14px)">
+                    <span>70%</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="skill-item">
+                <p>three js</p>
+                <div class="progress inner-shadow">
+                  <div class="progress-bar" style="width: calc(20% - 14px)">
+                    <span>20%</span>
+                  </div>
+                </div>
+              </div>
+              <!-- skill item end -->
+
+              <!-- experience start -->
+              <div class="row">
+                <div class="experience tab-content">
+                  <div class="row">
+                    <div class="timeline">
+                      <div class="row">
+                        <!-- timeline item start -->
+                        <div class="timeline-item">
+                          <div class="timeline-item-inner outer-shadow">
+                            <i class="fas fa-briefcase icon"> </i>
+                            <span>1400</span>
+                            <h3>full stack developer</h3>
+                            <h4>Company name, iran</h4>
+                            <p>
+                              Lorem ipsum dolor sit amet consectetur,
+                              adipisicing elit. Voluptates fugit iure cum rerum
+                              magni tenetur omnis impedit autem dolor distinctio
+                              Lorem ipsum dolor sit, amet consectetur
+                              adipisicing elit. Vel cum id minima autem, sit
+                              esse!
+                            </p>
+                          </div>
+                        </div>
+                        <!-- timeline item end -->
+                        <!-- timeline item start -->
+                        <div class="timeline-item">
+                          <div class="timeline-item-inner outer-shadow">
+                            <i class="fas fa-briefcase icon"> </i>
+                            <span>1400</span>
+                            <h3>full stack developer</h3>
+                            <h4>Company name, iran</h4>
+                            <p>
+                              Lorem ipsum dolor sit amet consectetur,
+                              adipisicing elit. Voluptates fugit iure cum rerum
+                              magni tenetur omnis impedit autem dolor distinctio
+                              Lorem ipsum dolor sit, amet consectetur
+                              adipisicing elit. Vel cum id minima autem, sit
+                              esse!
+                            </p>
+                          </div>
+                        </div>
+                        <!-- timeline item end -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- experience end   -->
+            </div>
+          </div>
+        </div>
+        <!-- skills end -->
+      </div>
     </section>
 
     <!-- about section end -->
-</body>
-
+  </body>
 </html>
