--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <!-- about tab end -->
         <!-- skills start -->
         <div class="row">
-          <div class="skills tab-content">
+          <div class="skills tab-content active">
             <div class="row">
               <!-- skill item start -->
               <div class="skill-item">
@@ -276,6 +276,9 @@
                 </div>
               </div>
               <!-- experience end   -->
+              <!-- education start -->
+
+              <!-- education end -->
             </div>
           </div>
         </div>
@@ -284,5 +287,8 @@
     </section>
 
     <!-- about section end -->
+
+    <!-- main js -->
+    <script src="js/main.js"></script>
   </body>
 </html>
